logs.txt
PS C:\Users\mbarreto\Desktop\prueba> venv\Scripts\activatevenv\Scripts\activate : No se puede cargar el archivo C:\Users\mbarreto\Desktop\prueba\venv\Scripts\Activate.ps1porque la ejecución de scripts está deshabilitada en este sistema. Para obtener más información, consulta el temaabout_Execution_Policies en https:/go.microsoft.com/fwlink/?LinkID=135170.En línea: 1 Carácter: 1+ venv\Scripts\activate+ ~~~~~~~~~~~~~~~~~~~~~+ CategoryInfo : SecurityError: (:) [], PSSecurityException+ FullyQualifiedErrorId : UnauthorizedAccess

reader = easyocr.Reader(['es'],model_storage_directory='C:\Users\mbarreto\Desktop\prueba')

C:\Users\mbarreto\Desktop\prueba

>>> reader = easyocr.Reader(['es'],model_storage_directory='C:\Users\mbarreto\Desktop\prueba')
  File "<python-input-2>", line 1
    reader = easyocr.Reader(['es'],model_storage_directory='C:\Users\mbarreto\Desktop\prueba')
                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape
>>> reader = easyocr.Reader(['es'],model_storage_directory='\Users\mbarreto\Desktop\prueba')
<python-input-3>:1: SyntaxWarning: invalid escape sequence '\m'
Neither CUDA nor MPS are available - defaulting to CPU. Note: This module is much faster with a GPU.
Downloading detection model, please wait. This may take several minutes depending upon your network connection.
Progress: |██████████████████████████████████████████████████| 100.0% CompleteDownloading recognition model, please wait. This may take several minutes depending upon your network connection.
>>> ress: |██████████████████████████████████████████████████| 100.0% Complete

"C:\Users\mbarreto\Desktop\prueba\Users\mbarreto\Desktop\prueba\27084609-001.jpg"

result = reader.readtext('Users\mbarreto\Desktop\prueba\27084609-001.jpg')

"C:\prueba\27084609001.jpg"


reader = easyocr.Reader(['es'],model_storage_directory='\mbarreto\prueba')

>>> reader = easyocr.Reader(['es'],model_storage_directory='\prueba')  defini 

<python-input-5>:1: SyntaxWarning: invalid escape sequence '\p'
Neither CUDA nor MPS are available - defaulting to CPU. Note: This module is much faster with a GPU.
Downloading detection model, please wait. This may take several minutes depending upon your network connection.
Progress: |██████████████████████████████████████████████████| 100.0% CompleteDownloading recognition model, please wait. This may take several minutes depending upon your network connection.


\prueba\27084609001.jpg

result = reader.readtext('C:/prueba/27084609001.jpg') defini

print(result)

result = reader.readtext('C:/prueba/27084609001.jpg',detail=0, paragraph=True) defini

 print(f"Texto detectado: '{text}' (Confianza: {conf:.2f})")




recapitulando

result = reader.readtext('C:/prueba/27084609001.jpg')

for res in result:
...      coord = res[0]
...      text = res[1]
...      conf = res[2]
...      print(f"Texto detectado: '{text}' (Confianza: {conf:.2f})")


pip install supervision definitiviiii


pip install pandas openpyxl #para el excel 

fuente de los deseos https://blog-roboflow-com.translate.goog/how-to-use-easyocr/?_x_tr_sl=en&_x_tr_tl=es&_x_tr_hl=es&_x_tr_pto=wa

python -m pip install supervision --user
